Added --enable-preview to build.gradle
Signed-off-by: Luktronic <luktronic@gmx.at>